# RIL

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: attr.h.26BC71F55BEFDD93.idx  attr.h.50A481BFABDD2F6F.idx  buffer_info.h.B122548492AA2127.idx  buffer_info.h.C48436A94ACAA4E4.idx  cast.h.28561497D33BF20D.idx  cast.h.B04FBEA750EE20AE.idx  class.h.970EA1390FC5CC08.idx  class.h.A617B11FF4900903.idx  common.h.23D26479909BE025.idx  common.h.E858FC2C825FB25C.idx  descr.h.00B3819B652DAF13.idx  descr.h.749E9DC19E24225D.idx  filters.h.752DB133537A3429.idx  filters.hpp.3A75428D0EB39EF1.idx  gil.h.312B63547900E46B.idx  gil.h.D954FAED72764183.idx  init.h.41D19B43E7459A45.idx  init.h.BCD923263FB1272E.idx  internals.h.6BFB257B5E378DBA.idx  internals.h.D429D0518D666A77.idx  kernel.h.354E77C0FD5921C2.idx  kernel.h.9205CE12C375631B.idx  matrix.cpp.3311FE5F5D5085F4.idx  matrix.cpp.42C89FE74B21F807.idx  matrix.h.62CB9696E0FFD8D0.idx  matrix.h.CD80E016B2E02CC9.idx  operators.h.7B0ADE9B639038A8.idx  operators.h.8B1D0E12B1E6E01F.idx  options.h.32C3EFA98BF92296.idx  options.h.5F41B27CC0A53BEA.idx  pybind11.h.24CCF468E602A4A8.idx  pybind11.h.29C8BE60D62D8B36.idx  python_packer.cpp.5F2D4B22B84EF7D8.idx  python_packer.cpp.78491A94546F59B1.idx  python_packer.h.BCF864030BCA8910.idx  python_packer.h.CFFE10D4D1A523C5.idx  pytypes.h.17E41E1E763D82C8.idx  pytypes.h.D1403224FF5E408B.idx  type_caster_base.h.C66B7D6E7E95E060.idx  type_caster_base.h.D0986F367B84A8F2.idx  (+2 more)
Logs/: 14Apr2022.md
cmake/Modules/: FindOpenCL.cmake
include/: .filters.hpp.swp  .image.h.swp  .kernel.h.swp  .python_packer.h.swp  .utils.hpp.swp  filters.h  filters.hpp  image.h  kernel.h  math.h  matrix.h  utils.hpp
include/algos/: colorspaces.h  colorspaces.hpp  compression.h  filters.hpp
include/algos/filters/: gaussian.h
include/configs/: configs.h
include/data/: abs_image.h  image.h
include/devices/: opencl.h  opencl.hpp  opencl_wrapper.hpp
playground/: README.md  icd.cpp  image_test.cpp  opencl_kernels.cpp
playground/trash/: opencl_kernels.cpp
src/: .image.cpp.swp  .python_packer.cpp.swp  image.cpp  matrix.cpp  python_packer.cpp
src/algos/: compression.cpp
src/algos/filters/: gaussian.cpp
src/configs/: configs.cpp
src/devices/: opencl.cpp
src/kernels/: gaussian.cl  matmul.cl  saxpy.cl  simple_vector_addition.cl
tests/: .test_filters.py.swp  .test_performance.py.swp  .testing_buffercompat.py.swp  test_filters.py  test_lifetime_numpy.py  testing_buffercompat.py
